Fix Bug 311688 - The "Export KMail Data" action uses icon "backup-mail",

which is unavailable

We don't have icons for it. So Use kmail for 4.10
We will ask for new icon

FIXED-IN: 4.10
BUG: 311688